
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64 ;
typedef int uint32 ;


 int UINT64 (int) ;
 int adv (int) ;

unsigned int calc(double sample,uint64* state)
{
      int v;
      uint64 sample_int=sample*((double)(UINT64(1)<<53));
      uint32 x1=sample_int>>27;
      uint32 x2=sample_int & ((1<<27)-1);
      uint32 out;
      if ((sample>=1.0) || (sample<0.0))
      {

            return 1;
      }
      for (v=0;v<(1<<22);v++)
      {
            *state=adv((((uint64)x1)<<22)|v);
            out=((*state)>>(48-27))&((1<<27)-1);
            if (out==x2)
            {
                   return 0;
            }
      }

      return 2;
}
